# PPNRF

./: PiPiNRF.kicad_prl  PiPiNRF.kicad_pro  README.md  fp-info-cache
hardware/: #auto_saved_files#  PiPiNRF.kicad_pcb  PiPiNRF.kicad_pro  PiPiNRF.kicad_sch  fp-lib-table  sym-lib-table  ~PiPiNRF.kicad_sch.lck
software/: CMakeLists.txt  CMakeLists.txt.old
software/include/: HAL.h  receiver.h  tester.h  transmitter.h
software/lib/HID_Handler/: DanceInputHandler.cpp  DanceInputHandler.h  callbacks.c  usb_descriptors.c  usb_descriptors.h
software/receiver/: CMakeLists.txt
software/receiver/include/: receiver.h
software/receiver/src/: receiver.cpp
software/src/: receiver.cpp  tester.cpp  transmitter.cpp
software/transmitter/: CMakeLists.txt
software/transmitter/include/: transmitter.h
software/transmitter/src/: transmitter.cpp
